# sologm

./: .gitignore  COMPLETED.md  CONVENTIONS.md  DISPLAY_CONVENTIONS.md  LICENSE  LICENSE.md  PLAN.md  PRD.md  README.md  TDD.md  adding_acts.md  example_game.md  example_game.sh  feature_act_summary_tdd.md  pyproject.toml  pytest.ini
.cursor/: rules
claude/: README.md
claude/hooks/: ruff_format.sh
conventions/: architecture.md  database_access.md  display.md  index.md  models.md  styled_text.md  testing.md
conventions/examples/: database_access.md
core/: game.py
database/: __init__.py  session.py
development_prompts/: building_a_plan.md  implmenting_steps.md
examples/: models_demo.py  mythic_demo.py
feature/renderers/: prd.md
features/act_narrative/: plan.md  tdd.md
features/refactor_models/: phase1-plan.md  phase2-plan.md  phase3-plan.md  phase4-plan.md  problem.md  tdd.md
features/renderers/: plan.md  tdd.md
migrations/: env.py
migrations/versions/: 059617f91179_add_act_model_and_update_relationships.py  0a5d38e68a85_update_event_model_to_not_have_a_direct_.py  a1b2c3d4e5f6_add_event_source_table.py  add_event_source_table.py  b0d9b861b595_change_act_description_to_summary_and_.py  b2d3e4f5g6h7_update_event_source_model.py  eef7a1859ae9_add_ondelete_cascade_to_foreign_keys.py
models/: __init__.py  base.py  dice.py  event.py  game.py  oracle.py  relationships.py  scene.py  utils.py
sologm/: CLAUDE.md  __init__.py  main.py
sologm/cli/: CLAUDE.md  act.py  app.py  db_helpers.py  dice.py  display.py  event.py  game.py  main.py  oracle.py  scene.py
sologm/commands/: __init__.py  base.py  contexts.py  exceptions.py  results.py
sologm/core/: CLAUDE.md  README.md  __init__.py  act.py  base_manager.py  dice.py  event.py  factory.py  game.py  oracle.py  scene.py
sologm/database/: __init__.py  session.py
sologm/examples/: fantasy_game_demo.py
sologm/integrations/: anthropic.py
sologm/models/: CLAUDE.md  README.md  __init__.py  act.py  base.py  dice.py  event.py  event_source.py  game.py  mixins.py  oracle.py  relationships.py  scene.py  utils.py
sologm/rpg_helper/: __init__.py  app.py  bot.py  models_adapter.py
tests/: test_models2.py
(+161 files in other folders)
