[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sologm"
version = "0.1.0"
description = "A solo roleplaying game manager"
authors = [
    {name = "Michael Barrett"}
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
    "sqlalchemy>=2.0.0",
    "structlog>=24.1.0",
]

[project.scripts]
sologm = "sologm.interfaces.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["sologm"]